--- a/views/layout.njk
+++ b/views/layout.njk
@@ -13,8 +13,8 @@
 
   <div>
     <div>
-      <div class="bg-primary p-3 text-center">
-        <span class="text-white">Decathlon</span>
+      <div class="bg-warning p-3 text-center text-white">
+        <span class="text-white">Golf project</span>
       </div>
 
     {% block content %}
