--- a/views/form.njk
+++ b/views/form.njk
@@ -35,7 +35,7 @@
     </div>
     <div class="mb-2">
       <label for="level">Votre niveau :</label>&nbsp;&nbsp;
-      <select name="level" id="level">
+      <select name="user_level" id="level">
         <option value="beginner">Débutant</option>
         <option value="intermediate">Confirmé</option>
         <option value="expert">Expert</option>
