--- a/views/index.njk
+++ b/views/index.njk
@@ -88,7 +88,7 @@ const userInput = document.querySelector("#input");
 const myButton = document.querySelector("#myButton");
 
 myButton.addEventListener("click", () => {
-  window.location.href = "http://localhost:3000/index/" + userInput.value;
+  window.location.href = "https://aqueous-stream-16350.herokuapp.com/" + userInput.value;
 });
 
 </script>
